styles.css
*,
body {
    margin: 0;
    padding: 0;
    font-family: "Open Sans", Roboto, arial, sans-serif;
}

button {
    cursor: pointer;
}

.link {
    color: rgb(0, 176, 212);
    cursor: pointer;
    border: none;
    background: transparent;
}

.circle {
    border-radius: 50%;
    width: 150px;
}

.backdrop {
    z-index: -1;
    background-color: rgba(0, 0, 0, 0.7);
    width: 100vw;
    height: 100vh;
    position: absolute;
}

.dont-show-again {
    position: fixed;
    top: 12%;
    right: 12%;
    z-index: 10;
}

.help-btn {
    position: fixed;
    bottom: 20px;
    right: 20px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    font-size: 2em;
    color: white;
    background: rgb(133, 133, 133);
    border: 0;
    z-index: -2;
}

.modal {
    width: 80%;
    height: 75%;
    border-radius: 20px;
    background: white;
    position: fixed;
    top: 10%;
    left: 10%;
    overflow-y: scroll;
}

.modal::-webkit-scrollbar {
    display: none;
}

.x-btn {
    border: none;
    background: transparent;
    position: fixed; 
    top: 110px;
    left: 220px;
    color:rgb(133, 133, 133);
    z-index: 1;
}

.help-modal {
    background: white;
}

.modal-container {
    text-align: center;
}

.top-container {
    width: 75%;
    margin: 0 auto;
}

.top-container p {
    margin-top: 0.5em;
}

.top-container button {
    font-size: 1rem;
}

.cards-container {
    display: flex;
    justify-content: center;
    gap: 5em;
    padding: 4em 5em;
    margin: 1em 4em;
}

.help-card-container {
    display: flex;
    flex-direction: column;
    width: 30%;
    align-items: center;
    gap: 1em;
}

.hidden {
    display: none;
}

.strong {
    font-weight: 700;
}

.image-container img {
    margin: 75px 0;
}

.scroll-down-img {
    width: 100px;
}

.form-container {
    display: flex;
    justify-content: center;
    gap: 1em;
    padding: 4em;
    margin-bottom: 2em;
}

.checkbox-container {
    display: flex;
    gap: 1em;
}

input[type="checkbox"],
label {
    cursor: pointer;
}

#close-btn {
    font-size: 1.125rem;
}

.lop-header {
}

.lop-header-container {
    background: white;
    position: fixed;
    top: 10%;
    padding: 2em 0;
    border-bottom: 1px solid lightgray;
    width: 80%;
    text-align: center;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.overview-container {
    margin-top: 43px;
    display:flex;
}

.overview-img{
    width:60%;
}
.overview-left-container{
    width:50%;
}
.lop-middle-container{
    width:100%;
}

.lop-img{
    width:90%;
    border:1px solid #dadada;
}

.overview-container {
    margin-top: 100px;
    padding:0px 100px;
}

.green{
    color:#01a852;
}

.list-number {
    background: rgb(7, 38, 104);
    color: white;
    border-radius: 50%;
    height: 50px;
    width: 50px;
    text-align: center;
    margin:0;
}

.letter-container{
    grid-template-columns: 0.1fr 0.5fr 1fr;
    display:grid;
    gap:20px;
}

.letter-3-image-container{
    display:flex;
    flex-direction: column;
    gap:20px;
}
.letter-5-text-container{
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    gap:20px;
}
.letter-5-text-1-container, .letter-5-text-2, .letter-5-text-3{
    height:33.33%;
}

.letter-5-image-container{
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    gap:20px;
}
.letter-5-text-2{
    justify-self: center;
}
.all-letters-container{
    display:grid;
    gap:100px;
    padding:100px;
}
.lop-end-text{
    justify-self: center;
}
.other-information-container {
    text-align: center;
    display: grid;
    grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
    gap: 1em;
    margin: 0 auto 4em;
    padding:0px 100px;
}

.other-information-container h2 {
    padding: 1em;
    grid-column: 1 / -1;
}

.information-cards {
    border: 1px dashed #dadada; 
    background: rgb(241, 241, 241);
    padding: 1em 2em 0;
    height: 80px;
}

.submit-lop-request-modal{
    background:#f2f3f5;
}
.bg-white{
    background:white;
}

